base update jumbo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -231,9 +231,9 @@ footer .footer-column a:hover {
     <div class="row">
 
       <!-- Main Content -->
-      <div class="col" id="main-content">
+      <div class="col" id="_main-content">
 
-        <div class="_container mt-5"> <!-- content -->
+        <div class="_container _mt-5"> <!-- content -->
             {% include 'inc/flashmsg.html' %}
            
             {% block content %}
